--- a/BeastList/app/src/main/AndroidManifest.xml
+++ b/BeastList/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BeastDetailActivity" >
+        <activity android:name=".BeastPagerActivity"
+                  android:parentActivityName=".BeastListActivity">
         </activity>
     </application>
 
